# NeuroMap

./: .gitignore  README.md  pyproject.toml  setup.sh  structure.txt
src/neuromap/: __init__.py  __main__.py  cli.py  mapper.py  scanner.py
src/neuromap/detectors/: entrypoints.py
src/neuromap/formatters/: __init__.py  claude.py  json.py  markdown.py  xml.py
tests/: test_mapper.py
